Simplify Day09